[package]
name = "blockchain"
version = "0.1.0"
authors = ["10thfloor <remember.mackenzie@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tui = "0.19.0"
